--- a/correlation diagram.html
+++ b/correlation diagram.html
@@ -31,7 +31,7 @@
         <area shape="rect" coords="300,237,360,295" href="https://sports.yahoo.co.jp/" target="all" alt="Kasumi" onclick="wopen()">
         <area shape="rect" coords="200,237,260,295" href="https://sports.yahoo.co.jp/" target="all" alt="Kensuke" onclick="wopen()">
         <area shape="rect" coords="245,315,305,372" href="https://sports.yahoo.co.jp/" target="all" alt="Kousuke" onclick="wopen()">
-        <area shape="rect" coords="400,237,460,295" href="https://sports.yahoo.co.jp/" target="all" alt="Hirotaka" onclick="wopen()">
+        <area shape="rect" coords="400,237,460,295" href="https://agoraago.github.io/hirotaka" target="all" alt="Hirotaka" onclick="wopen()">
         <area shape="rect" coords="645,123,707,175" href="https://sports.yahoo.co.jp/" target="all" alt="Jiro" onclick="wopen()">
         <area shape="rect" coords="745,123,807,175" href="https://sports.yahoo.co.jp/" target="all" alt="Hitomi" onclick="wopen()">
         <area shape="rect" coords="815,240,875,300" href="https://sports.yahoo.co.jp/" target="all" alt="Takeshi" onclick="wopen()">
