--- a/hirotaka.html
+++ b/hirotaka.html
@@ -23,11 +23,11 @@
       <div class="container">
         <p>name  :  hirotaka</p>
         <hr color="#ff0000" width="100%" size="1">
-        <p>hobby :  野球（ヤクルト）・ゲーム</p>
+        <p>hobby :  野球（ヤクルト）・ゲーム（テレビ・卓上）・音楽</p>
         <hr color="#ff0000" width="100%" size="3">
-        <p>favorite foods :  </p>
+        <p>favorite foods :  カオマンガイ・鳥ハム・煮物・肉類・エビにベーコン巻いたやつ・ビール（酒は弱い）</p>
         <hr color="#ff0000" width="100%" size="3">
-        <p>other :  末っ子長男</p>
+        <p>other :  末っ子長男・朝に強い・車酔い・☠寝室にいる蚊☠・☠苦いもの全般☠</p>
         <hr color="#ff0000" width="100%" size="3">
       </div>
 
