--- a/correlation diagram.html
+++ b/correlation diagram.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -23,23 +24,23 @@
     <div class="container">
       <td width="1000"><img src="imagecollection/correlation diagram.png" width="1000" height="500" border="0" usemap="#Map">
       <map name="Map" id="Map">
-        <area shape="rect" coords="200,123,260,170" href="https://sports.yahoo.co.jp/" target="all" alt="Sumio" onclick="wopen()">
-        <area shape="rect" coords="300,123,360,170" href="https://www.yahoo.co.jp/" target="all" alt="Harumi" onclick="wopen()">
-        <area shape="rect" coords="100,237,165,295" href="https://weather.yahoo.co.jp/weather/" target="all" alt="Ai" onclick="wopen()">
-        <area shape="rect" coords="5,237,70,295" href="https://news.yahoo.co.jp/" target="all" alt="Hiroshi" onclick="wopen()">
-        <area shape="rect" coords="52,315,117,372" href="https://sports.yahoo.co.jp/" target="all" alt="Sen" onclick="wopen()">
-        <area shape="rect" coords="300,237,360,295" href="https://sports.yahoo.co.jp/" target="all" alt="Kasumi" onclick="wopen()">
-        <area shape="rect" coords="200,237,260,295" href="https://sports.yahoo.co.jp/" target="all" alt="Kensuke" onclick="wopen()">
-        <area shape="rect" coords="245,315,305,372" href="https://sports.yahoo.co.jp/" target="all" alt="Kousuke" onclick="wopen()">
+        <area shape="rect" coords="200,123,260,170" href="https://agoraago.github.io/sumio" target="all" alt="Sumio" onclick="wopen()">
+        <area shape="rect" coords="300,123,360,170" href="https://agoraago.github.io/harumi" target="all" alt="Harumi" onclick="wopen()">
+        <area shape="rect" coords="100,237,165,295" href="https://agoraago.github.io/ai" target="all" alt="Ai" onclick="wopen()">
+        <area shape="rect" coords="5,237,70,295" href="https://agoraago.github.io/hiroshi" target="all" alt="Hiroshi" onclick="wopen()">
+        <area shape="rect" coords="52,315,117,372" href="https://agoraago.github.io/sen" target="all" alt="Sen" onclick="wopen()">
+        <area shape="rect" coords="300,237,360,295" href="https://agoraago.github.io/kasumi" target="all" alt="Kasumi" onclick="wopen()">
+        <area shape="rect" coords="200,237,260,295" href="https://agoraago.github.io/kensuke" target="all" alt="Kensuke" onclick="wopen()">
+        <area shape="rect" coords="245,315,305,372" href="https://agoraago.github.io/kousuke" target="all" alt="Kousuke" onclick="wopen()">
         <area shape="rect" coords="400,237,460,295" href="https://agoraago.github.io/hirotaka" target="all" alt="Hirotaka" onclick="wopen()">
-        <area shape="rect" coords="645,123,707,175" href="https://sports.yahoo.co.jp/" target="all" alt="Jiro" onclick="wopen()">
-        <area shape="rect" coords="745,123,807,175" href="https://sports.yahoo.co.jp/" target="all" alt="Hitomi" onclick="wopen()">
-        <area shape="rect" coords="815,240,875,300" href="https://sports.yahoo.co.jp/" target="all" alt="Takeshi" onclick="wopen()">
-        <area shape="rect" coords="915,240,975,300" href="https://sports.yahoo.co.jp/" target="all" alt="Kae" onclick="wopen()">
-        <area shape="rect" coords="760,370,820,420" href="https://sports.yahoo.co.jp/" target="all" alt="Ema" onclick="wopen()">
-        <area shape="rect" coords="860,370,925,420" href="https://sports.yahoo.co.jp/" target="all" alt="Sara" onclick="wopen()">
-        <area shape="rect" coords="540,237,600,295" href="https://sports.yahoo.co.jp/" target="all" alt="Saori" onclick="wopen()">
-        <area shape="rect" coords="465,315,530,375" href="https://sports.yahoo.co.jp/" target="all" alt="Ryo" onclick="wopen()">
+        <area shape="rect" coords="645,123,707,175" href="https://agoraago.github.io/jiro" target="all" alt="Jiro" onclick="wopen()">
+        <area shape="rect" coords="745,123,807,175" href="https://agoraago.github.io/hitomi" target="all" alt="Hitomi" onclick="wopen()">
+        <area shape="rect" coords="815,240,875,300" href="https://agoraago.github.io/takeshi" target="all" alt="Takeshi" onclick="wopen()">
+        <area shape="rect" coords="915,240,975,300" href="https://agoraago.github.io/kae" target="all" alt="Kae" onclick="wopen()">
+        <area shape="rect" coords="760,370,820,420" href="https://agoraago.github.io/ema" target="all" alt="Ema" onclick="wopen()">
+        <area shape="rect" coords="860,370,925,420" href="https://agoraago.github.io/sara" target="all" alt="Sara" onclick="wopen()">
+        <area shape="rect" coords="540,237,600,295" href="https://agoraago.github.io/saori" target="all" alt="Saori" onclick="wopen()">
+        <area shape="rect" coords="465,315,530,375" href="https://agoraago.github.io/ryo" target="all" alt="Ryo" onclick="wopen()">
       </map></td>
     </div>
 
