--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -33,9 +34,9 @@
           <h2>Information Item List</h2>
         </div>
         <div class="btn-wrapper">
-          <a href="#" class="btn bezier-curve"><i class="fas fa-child"></i> 相関図 </a>
-          <a href="#" class="btn gift"><i class="fas fa-gift"></i> 贈り物履歴 </a>
-          <a href="#" class="btn calendar-alt"><i class="fas fa-calendar-alt"></i> イベント </a>
+          <a href="https://agoraago.github.io/correlation%20diagram" class="btn bezier-curve"><i class="fas fa-child"></i> 相関図 </a>
+          <a href="https://agoraago.github.io/gift%20history" class="btn gift"><i class="fas fa-gift"></i> 贈り物履歴 </a>
+          <a href="https://agoraago.github.io/event" class="btn calendar-alt"><i class="fas fa-calendar-alt"></i> イベント </a>
         </div>
       </div>
     </div>
