--- a/gift history.html
+++ b/gift history.html
@@ -13,7 +13,7 @@
     <header>
       <div class="container">
         <div class="header-left">
-          <img class="logo" src="imagecollection/train.png">
+          <a href="https://agoraago.github.io/index"><img class="logo" src="imagecollection/train.png">
         </div>
 
         <div class="header-right">
