--- a/ai.html
+++ b/ai.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -12,7 +13,7 @@
     <header>
       <div class="container">
         <div class="header-left">
-          <img class="logo" src="./../imagecollection/train.png">
+          <a href="https://agoraago.github.io/index"><img class="logo" src="./../imagecollection/train.png">
         </div>
         <div class="header-right">
           <a href="#">紹介文※間違えてたらごめんなさい🙇</a>
