--- a/ai.html
+++ b/ai.html
@@ -16,7 +16,7 @@
           <a href="https://agoraago.github.io/index"><img class="logo" src="./../imagecollection/train.png">
         </div>
         <div class="header-right">
-          <a href="#">紹介文※間違えてたらごめんなさい🙇</a>
+          <a href="#">間違えてたらごめんなさい🙇</a>
         </div>
       </div>
     </header>
@@ -30,6 +30,14 @@
         <hr color="#ff0000" width="100%" size="3">
         <p>other :  長女・元バスケットボール部・元野球部員・☠カリフラワー☠・☠高圧的な態度☠</p>
         <hr color="#ff0000" width="100%" size="3">
+      </div>
+      <br>
+      <div class="lesson-wrapper">
+        <div class="container">
+          <div class="btn-wrapper">
+            <a href="https://agoraago.github.io/correlation%20diagram" class="btn bezier-curve"><i class="fas fa-child"></i> 相関図に戻る </a>
+          </div>
+        </div>
       </div>
 
 
