--- a/harumi.html
+++ b/harumi.html
@@ -16,7 +16,7 @@
           <a href="https://agoraago.github.io/index"><img class="logo" src="./../imagecollection/train.png">
         </div>
         <div class="header-right">
-          <a href="#">紹介文※間違えてたらごめんなさい🙇</a>
+          <a href="#">間違えてたらごめんなさい🙇</a>
         </div>
       </div>
     </header>
@@ -31,6 +31,14 @@
         <p>other :  元野球部マネージャー・福岡県出身・お酒は飲めない・優しい・☠ウニ☠・☠肉類
         ☠・☠いちじく☠・☠水泳☠・☠風呂掃除☠</p>
         <hr color="#ff0000" width="100%" size="3">
+      </div>
+      <br>
+      <div class="lesson-wrapper">
+        <div class="container">
+          <div class="btn-wrapper">
+            <a href="https://agoraago.github.io/correlation%20diagram" class="btn bezier-curve"><i class="fas fa-child"></i> 相関図に戻る </a>
+          </div>
+        </div>
       </div>
 
 
