--- a/kasumi.html
+++ b/kasumi.html
@@ -16,7 +16,7 @@
           <a href="https://agoraago.github.io/index"><img class="logo" src="./../imagecollection/train.png">
         </div>
         <div class="header-right">
-          <a href="#">紹介文※間違えてたらごめんなさい🙇</a>
+          <a href="#">間違えてたらごめんなさい🙇</a>
         </div>
       </div>
     </header>
@@ -31,6 +31,15 @@
         <p>other :  次女・元バドミントン部・仮装大賞3位・☠魚と酢が合わさった料理☠・☠ゲーセンの音☠・☠ホラー映画☠・☠焦らせる☠</p>
         <hr color="#ff0000" width="100%" size="3">
       </div>
+      <br>
+      <div class="lesson-wrapper">
+        <div class="container">
+          <div class="btn-wrapper">
+            <a href="https://agoraago.github.io/correlation%20diagram" class="btn bezier-curve"><i class="fas fa-child"></i> 相関図に戻る </a>
+          </div>
+        </div>
+      </div>
+
 
 
     </div>
