--- a/contact.html
+++ b/contact.html
@@ -5,19 +5,14 @@
 <title>HTML入門-フォームの作成</title>
 </head>
 <body>
-<table border="1">
-  <tr>
-    <td>名前</td>
-    <td><?php echo htmlspecialchars($_POST["name"], ENT_QUOTES) ?></td>
-  </tr>
-  <tr>
-    <td>メールアドレス</td>
-    <td><?php echo htmlspecialchars($_POST["mail"], ENT_QUOTES) ?></td>
-  </tr>
-  <tr>
-    <td>お問合せ内容</td>
-    <td><?php echo htmlspecialchars($_POST["comment"], ENT_QUOTES) ?></td>
-  </tr>
-</table>
+<h1>お問合せ</h1>
+<form action="contact.php" method="post">
+	<p>お名前（必須）：<br>
+	<input type="text" name="name"></p>
+	<p>メールアドレス：<br>
+	<input type="text" name="mail"></p>
+	<p>お問合せ内容：<br>
+	<textarea name="comment" cols="30" rows="5"></textarea></p>
+	<p><input type="submit" value="確認する"></p>
+</form>
 </body>
-</html>
