--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>お問合せ</h1>
-<form action="contact.php" method="post">
+<form action="https://agoraago.github.io/contact.php" method="post">
 	<p>お名前（必須）：<br>
 	<input type="text" name="name"></p>
 	<p>メールアドレス：<br>
