--- a/calendar.html
+++ b/calendar.html
@@ -6,6 +6,7 @@
     <title>calendar</title>
     <link rel="stylesheet" href="stylesheet(calendar).css">
     <link rel="stylesheet" href="responsive.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 
   </head>
   <body>
