--- a/timetable.html
+++ b/timetable.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -24,6 +25,7 @@
           <a href="https://timetablenavi.keikyu-bus.co.jp/dia/timetable/web/51255/8560031012/02/" class="btn busjob"><i class="fas fa-bus"></i> 京急蒲田入口　大森東五丁目行 </a>
           <a href="https://timetablenavi.keikyu-bus.co.jp/dia/timetable/web/51255/1040065011/08/" class="btn busjob"><i class="fas fa-bus"></i> 京急蒲田入口　森ケ崎行 </a>
           <a href="https://timetablenavi.keikyu-bus.co.jp/dia/timetable/web/157206/1040065011/06/" class="btn busjob"><i class="fas fa-bus"></i> 京急蒲田駅(東側)　森ケ崎行 </a>
+          <a href="https://timetablenavi.keikyu-bus.co.jp/dia/timetable/web/51755/1010002012/04/" class="btn busjob"><i class="fas fa-bus"></i> 平和島駅　大森東五丁目行 </a>
         </div>
       </div>
     </div>
